feat(catalog): add SellerId product ownership